# robo

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  README.md  bun.lockb  package.json  scripts.ts  svelte.config.js  tsconfig.json  vite.config.ts
.cargo-husky/hooks/: pre-commit  pre-push
.docker/dev/: .dockerignore  Dockerfile  docker-compose.yml  ollama.nginx.conf
.github/: dependabot.yml
.github/workflows/: ci-compile-check.yaml  ci-compile-check.yml  ci-dependabot.yml  ci-quality-check.yaml  ci-quality-check.yml
.husky/: pre-commit  pre-push
frontend/: app.css  app.html  package.json  tailwind.config.ts  tsconfig.json
frontend/lib/: api.ts  state.ts
frontend/routes/: +layout.svelte
frontend/routes/(chat)/: +layout.svelte  +page.svelte  api.ts
frontend/routes/login/: +page.svelte
frontend/routes/register/: +page.svelte
frontend/src/: current-user.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  rq-provider.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/(chat)/: _api.ts  _store.ts  layout.tsx  page.tsx
frontend/src/app/register/: _api.ts  page.tsx
frontend/src/app/signin/: _api.ts  page.tsx
ollama/: Cargo.toml
ollama-rs/: Cargo.toml
ollama-rs-macros/src/: function.rs  lib.rs  tool_group.rs
ollama-rs/src/: coordinator.rs  error.rs  lib.rs  models.rs
ollama-rs/src/generation/: options.rs  parameters.rs
ollama-rs/src/generation/chat/: mod.rs
ollama-rs/src/generation/completion/: mod.rs
ollama-rs/src/generation/embeddings/: mod.rs  request.rs
ollama-rs/src/generation/tools/: mod.rs
ollama-rs/src/generation/tools/implementations/: browserless.rs  calc.rs  finance.rs  scraper.rs  search_ddg.rs  serper.rs
ollama-rs/src/models/: copy.rs  create.rs  delete.rs  list_local.rs  pull.rs  push.rs  show_info.rs
ollama/src/: error.rs  headers.rs  history.rs
ollama/src/generation/: images.rs  parameters.rs
ollama/src/generation/chat/: mod.rs  request.rs
ollama/src/generation/completion/: request.rs
ollama/src/models/: create.rs  delete.rs  list_local.rs  push.rs  show_info.rs
src/: args.rs  db.rs  jwt.rs  main.rs  migrations.rs  ollama.rs  result.rs  schemas.rs  state.rs
src/api/: middleware.rs  mod.rs  routes.rs
src/chat/: mod.rs  routes.rs  schemas.rs
src/db/: cache.rs  mod.rs
src/gui/: chat.rs  mod.rs  sidebar.rs
src/ui/: chat.rs  mod.rs  sidebar.rs  token_request.rs  utils.rs
src/user/: auth.rs  mod.rs  routes.rs  schemas.rs
