[package]
name = "robo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "ollama",
]

[dependencies]
ollama = { path = "ollama" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "parking_lot", "macros", "net"] }
serde = "1.0.217"
thiserror = "2.0.11"
actix-web = "4"
redis = "0.28.1"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
sea-query = { version = "0.32.1", default-features = false, features = ["derive", "backend-postgres"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
