[package]
name = "robo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "ollama",
]

[dependencies]
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
ollama = { path = "ollama" }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "parking_lot", "macros", "net"] }
serde = "1"
serde_json = "1"
ts-rs = "10.1"
thiserror = "2.0"
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
redis = { version = "0.31.0", features = ["tls-rustls"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-native-roots", "macros", "postgres"] }
sea-query = { version = "0.32.4", default-features = false, features = ["derive", "backend-postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "smallvec", "std", "parking_lot"] }
jsonwebtoken = "9"
argon2 = "0.5.3"
validator = { version = "0.20", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
