[package]
name = "ollama"
version = "0.2.4"
edition = "2021"
description = "A Rust library for interacting with the Ollama API"
# forked from
repository = "https://github.com/pepperoni21/ollama-rs"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1.15", optional = true }
url = "2"
async-stream = "0.3.5"
schemars = { version = "0.8.21", features = ["preserve_order"] }
thiserror = "2.0.12"

[features]
stream = ["tokio-stream", "reqwest/stream"]
